--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,24 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+#container {
+  text-align: center;
+  transform: translateY(-50%);
+  margin: 5px;
+  strong {
+    font-size: 20px;
+    line-height: 26px;
+  }
+  p {
+    font-size: 16px;
+    line-height: 22px;
+  
+    color: #8c8c8c;
+  
+    margin: 0;
+  }
+  a {
+    text-decoration: none;
+  }
+}  
