--- a/src/app/car-size/car-size.page.html
+++ b/src/app/car-size/car-size.page.html
@@ -1,4 +1,3 @@
-
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
@@ -10,8 +9,9 @@
   </ion-toolbar>
 </ion-header>
 <ion-content class="ion-padding">
-  <ion-grid>
-    <ion-row class="ion-justify-content-start">
+<ion-grid>
+  <ion-row class="ion-justify-content-start">
+    <ng-container *ngFor="let size of sizes">
       <ion-col sizeSm="6" sizeMd="4">
         <div>
           <ion-card  >
@@ -21,123 +21,12 @@
               </ion-card-title>
             </ion-card-header>
             <ion-card-content>
-              General Services
+              {{size.name}}
             </ion-card-content>
           </ion-card>
         </div>
       </ion-col>
-      <ion-col sizeSm="6" sizeMd="4">
-        <div>
-          <ion-card  >
-            <ion-card-header>
-              <ion-card-title>
-                <ion-icon name="car-outline"></ion-icon>
-              </ion-card-title>
-            </ion-card-header>
-            <ion-card-content>
-              General Services
-            </ion-card-content>
-          </ion-card>
-        </div>
-      </ion-col>
-      <ion-col sizeSm="6" sizeMd="4">
-        <div>
-          <ion-card  >
-            <ion-card-header>
-              <ion-card-title>
-                <ion-icon name="car-outline"></ion-icon>
-              </ion-card-title>
-            </ion-card-header>
-            <ion-card-content>
-              General Services
-            </ion-card-content>
-          </ion-card>
-        </div>
-      </ion-col>
-      <ion-col sizeSm="6" sizeMd="4">
-        <div>
-          <ion-card  >
-            <ion-card-header>
-              <ion-card-title>
-                <ion-icon name="car-outline"></ion-icon>
-              </ion-card-title>
-            </ion-card-header>
-            <ion-card-content>
-              General Services
-            </ion-card-content>
-          </ion-card>
-        </div>
-      </ion-col>
-      <ion-col sizeSm="6" sizeMd="4">
-        <div>
-          <ion-card  >
-            <ion-card-header>
-              <ion-card-title>
-                <ion-icon name="car-outline"></ion-icon>
-              </ion-card-title>
-            </ion-card-header>
-            <ion-card-content>
-              General Services
-            </ion-card-content>
-          </ion-card>
-        </div>
-      </ion-col>
-      <ion-col sizeSm="6" sizeMd="4">
-        <div>
-          <ion-card  >
-            <ion-card-header>
-              <ion-card-title>
-                <ion-icon name="car-outline"></ion-icon>
-              </ion-card-title>
-            </ion-card-header>
-            <ion-card-content>
-              General Services
-            </ion-card-content>
-          </ion-card>
-        </div>
-      </ion-col>
-      <ion-col sizeSm="6" sizeMd="4">
-        <div>
-          <ion-card  >
-            <ion-card-header>
-              <ion-card-title>
-                <ion-icon name="car-outline"></ion-icon>
-              </ion-card-title>
-            </ion-card-header>
-            <ion-card-content>
-              General Services
-            </ion-card-content>
-          </ion-card>
-        </div>
-      </ion-col>
-      <ion-col sizeSm="6" sizeMd="4">
-        <div>
-          <ion-card  >
-            <ion-card-header>
-              <ion-card-title>
-                <ion-icon name="car-outline"></ion-icon>
-              </ion-card-title>
-            </ion-card-header>
-            <ion-card-content>
-              General Services
-            </ion-card-content>
-          </ion-card>
-        </div>
-      </ion-col>
-      <ion-col sizeSm="6" sizeMd="4">
-        <div>
-          <ion-card  >
-            <ion-card-header>
-              <ion-card-title>
-                <ion-icon name="car-outline"></ion-icon>
-              </ion-card-title>
-            </ion-card-header>
-            <ion-card-content>
-              General Servicing
-            </ion-card-content>
-          </ion-card>
-        </div>
-      </ion-col>
+    </ng-container>
     </ion-row>
   </ion-grid>
   <div id="container">
