--- a/src/app/price/price.page.html
+++ b/src/app/price/price.page.html
@@ -5,5 +5,42 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-grid>
+    <ion-row class="ion-justify-content-start">
+      <ng-container *ngFor="let service of selectedServices">
+        <ion-col sizeSm="6" sizeMd="4">
+          <div>
+            <ion-card  >
+              <ion-card-header>
+                <ion-card-title>
+                  <ion-icon name="car-outline"></ion-icon>
+                </ion-card-title>
+              </ion-card-header>
+              <ion-card-content>
+                {{service.service}}
+              </ion-card-content>
+            </ion-card>
+          </div>
+        </ion-col>
+      </ng-container>
+    </ion-row>
+    <ion-row class="ion-justify-content-start">
+      <ng-container *ngFor="let service of selectedSize">
+        <ion-col sizeSm="6" sizeMd="4">
+          <div>
+            <ion-card  >
+              <ion-card-header>
+                <ion-card-title>
+                  <ion-icon name="car-outline"></ion-icon>
+                </ion-card-title>
+              </ion-card-header>
+              <ion-card-content>
+                {{service.service}}
+              </ion-card-content>
+            </ion-card>
+          </div>
+        </ion-col>
+      </ng-container>
+    </ion-row>
+  </ion-grid>
 </ion-content>
