--- a/src/app/services/services.page.html
+++ b/src/app/services/services.page.html
@@ -13,7 +13,7 @@
   <ion-grid>
     <ion-row class="ion-justify-content-start">
       <ng-container *ngFor="let service of services">
-        <ion-col sizeSm="6" sizeMd="4" (click)="toggleSelectItem(service)">
+        <ion-col sizeSm="6" sizeMd="4" fixed (click)="toggleSelectItem(service)">
           <div>
             <ion-card [ngClass]="{'highlight' : service.selected}">
               <ion-card-header>
