--- a/src/app/services/services.page.html
+++ b/src/app/services/services.page.html
@@ -15,7 +15,7 @@
       <ng-container *ngFor="let service of services">
         <ion-col sizeSm="6" sizeMd="4" fixed (click)="toggleSelectItem(service)">
           <div>
-            <ion-card [ngClass]="{'highlight' : service.selected}">
+            <ion-card type='button' [ngClass]="{'highlight' : service.selected}">
               <ion-card-header>
                 <ion-card-title>
                   <ion-icon name="car-outline"></ion-icon>
