--- a/src/app/services/services.page.html
+++ b/src/app/services/services.page.html
@@ -18,7 +18,7 @@
             <ion-card type='button' [ngClass]="{'highlight' : service.selected}">
               <ion-card-header>
                 <ion-card-title>
-                  <ion-icon name="car-outline"></ion-icon>
+                  <img class="service-icon" src="../../assets/services-icons/{{service.svg}}"/>
                 </ion-card-title>
               </ion-card-header>
               <ion-card-content>
