icons implemented in prices page

--- a/src/app/price/price.page.html
+++ b/src/app/price/price.page.html
@@ -22,7 +22,7 @@
               <ion-card>
                 <ion-card-header>
                   <ion-card-title>
-                    <ion-icon name="car-outline"></ion-icon>
+                    <img src="../../assets/services-icons/{{service.svg}}"/>
                   </ion-card-title>
                 </ion-card-header>
                 <ion-card-content>
@@ -44,7 +44,7 @@
             <ion-card>
               <ion-card-header>
                 <ion-card-title>
-                  <ion-icon name="car-outline"></ion-icon>
+                  <img class="service-icon" src="../../assets/sizes-icons/{{selectedSize.svg}}"/>
                 </ion-card-title>
               </ion-card-header>
               <ion-card-content>
